--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -554,12 +554,12 @@ video {
   --tw-contain-style:  ;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
+}
+
+.sticky {
+  position: sticky;
 }
 
 .mb-2 {
@@ -687,12 +687,12 @@ video {
   border-radius: 0.375rem;
 }
 
-.border-2 {
-  border-width: 2px;
-}
-
 .border {
   border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
 }
 
 .border-white {
